--- a/about.qmd
+++ b/about.qmd
@@ -1,19 +1,19 @@
 ---
 title: "About"
-image: profile.jpg
+image: _static/PaulSmith.jpeg
 about:
   template: jolla
   links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
-    - icon: linkedin
-      text: LinkedIn
-      href: https://linkedin.com
     - icon: github
       text: Github
-      href: https://github.com
+      href: https://github.com/p-j-smith
+    - icon: linkedin
+      text: LinkedIn
+      href: https://www.linkedin.com/in/p-j-smith/
+    - icon: google
+      text: Scholar
+      href: https://scholar.google.com/citations?hl=en&user=ZMpJEZcAAAAJ
 
 ---
 
-About this blog
+I'm a [Research Software Engineer](https://society-rse.org/about/) at UCL, working in the [Medical Imgaing Group](https://www.ucl.ac.uk/advanced-research-computing/expertise/research-software-development/medical-imaging-research-software-group) within [ARC](https://www.ucl.ac.uk/advanced-research-computing/advanced-research-computing-centre). Not sure yet what I'll write about, but let's find out!
